--- a/module-2/task/start/index.html
+++ b/module-2/task/start/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Task</title>
-</head>
-<body>
 
-</body>
+<head>
+  <title>Google Home Page Clone</title>
+</head>
+
+<body>
+  <ol>
+    <li><a target="_blank">About</a></li>
+    <li><a target="_blank">Store</a></li>
+
+
+  </ol>
+  <ol>
+    <li>
+      <a src="mailto:exampe@email.com">Gmail</a>
+    </li>
+    <li><a target="_blank">Images</a></li>
+
+
+  </ol>
+  <img src="../assets/google_logo.png" />
+  <img src="../assets/mag_glass.svg" />
+  <img src="../assets/microphone.svg" />
+
+  <a href="" </body>
+
 </html>
