added the header

--- a/module-2/task/start/index.html
+++ b/module-2/task/start/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <title>Google Home Page Clone</title>
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
 <body>
+  <header></header>
   <ol>
     <li><a target="_blank">About</a></li>
     <li><a target="_blank">Store</a></li>
@@ -20,10 +22,12 @@
 
 
   </ol>
-  <img src="../assets/google_logo.png" />
-  <img src="../assets/mag_glass.svg" />
-  <img src="../assets/microphone.svg" />
+</body>header>
 
-  <a href="" </body>
+<img src="../assets/google_logo.png" />
+<img src="../assets/mag_glass.svg" />
+<img src="../assets/microphone.svg" />
+
+<a href="" </body>
 
 </html>
