Correcting the header tag and simple CSS

--- a/module-2/task/start/index.html
+++ b/module-2/task/start/index.html
@@ -7,27 +7,25 @@
 </head>
 
 <body>
-  <header></header>
-  <ol>
-    <li><a target="_blank">About</a></li>
-    <li><a target="_blank">Store</a></li>
+  <header>
+    <ol>
+      <li><a target="_blank">About</a></li>
+      <li><a target="_blank">Store</a></li>
+    </ol>
+
+    <ol>
+      <li>
+        <a src="mailto:exampe@email.com">Gmail</a>
+      </li>
+      <li><a target="_blank">Images</a></li>
+    </ol>
+  </header>
 
 
-  </ol>
-  <ol>
-    <li>
-      <a src="mailto:exampe@email.com">Gmail</a>
-    </li>
-    <li><a target="_blank">Images</a></li>
+  <img src="../assets/google_logo.png" />
+  <img src="../assets/mag_glass.svg" />
+  <img src="../assets/microphone.svg" />
 
-
-  </ol>
-</body>header>
-
-<img src="../assets/google_logo.png" />
-<img src="../assets/mag_glass.svg" />
-<img src="../assets/microphone.svg" />
-
-<a href="" </body>
+</body>
 
 </html>
