Adding footer - copyright

--- a/module-2/final_project/start/index.html
+++ b/module-2/final_project/start/index.html
@@ -10,6 +10,19 @@
 </head>
 
 <body>
+  <header>
+    <div class="logoContainer">
+      <img
+        src="https://images.pexels.com/photos/7415757/pexels-photo-7415757.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    </div>
+
+  </header>
+
+  <footer>
+    <div class="copyrightContainer">
+      &copy;2021
+    </div>
+  </footer>
 
 </body>
 
