Added images into HTML file

--- a/module-2/final_project/start/index.html
+++ b/module-2/final_project/start/index.html
@@ -17,10 +17,41 @@
     </div>
 
   </header>
-
+  <img class="animal rabbit"
+    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal rabbit"
+    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal rabbit"
+    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal rabbit"
+    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal hamster"
+    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal hamster"
+    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal hamster"
+    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal hamster"
+    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal crocodile"
+    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal crocodile"
+    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal crocodile"
+    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal crocodile"
+    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal cat"
+    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal cat"
+    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal cat"
+    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+  <img class="animal cat"
+    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
   <footer>
     <div class="copyrightContainer">
-      &copy;2021
+      &copy; 2021
     </div>
   </footer>
 
