--- a/module-3/task/start/index.html
+++ b/module-3/task/start/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../../assets/styles/base.css">
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -25,6 +27,7 @@
     </footer>
   </div>
 
+  <script src="scripts/main.js">
+  </script>
 
-</body>
 </html>
