--- a/module-2/final_project/start/index.html
+++ b/module-2/final_project/start/index.html
@@ -17,42 +17,50 @@
     </div>
 
   </header>
-  <img class="animal rabbit"
-    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal rabbit"
-    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal rabbit"
-    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal rabbit"
-    src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal hamster"
-    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal hamster"
-    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal hamster"
-    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal hamster"
-    src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal crocodile"
-    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal crocodile"
-    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal crocodile"
-    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal crocodile"
-    src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal cat"
-    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal cat"
-    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal cat"
-    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <img class="animal cat"
-    src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-  <footer>
-    <div class="copyrightContainer">
-      &copy; 2021
+  <main>
+    <div class="imageContainer">
+      <div class="imageWrap">
+        <img class="animal rabbit"
+          src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+        <p>some text</p>
+      </div>
+      <img class="animal rabbit"
+        src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+      <p>some text</p>
     </div>
+    <img class="animal rabbit"
+      src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal rabbit"
+      src="https://images.pexels.com/photos/7067692/pexels-photo-7067692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal hamster"
+      src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal hamster"
+      src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal hamster"
+      src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal hamster"
+      src="https://images.pexels.com/photos/3432929/pexels-photo-3432929.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal crocodile"
+      src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal crocodile"
+      src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal crocodile"
+      src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal crocodile"
+      src="https://images.pexels.com/photos/60644/nile-crocodile-crocodylus-niloticus-zoo-60644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal cat"
+      src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal cat"
+      src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal cat"
+      src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <img class="animal cat"
+      src="https://images.pexels.com/photos/1170986/pexels-photo-1170986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+    <footer>
+      <div class="copyrightContainer">
+        &copy; 2021
+      </div>
+  </main>
   </footer>
 
 </body>
